# breathing_memory

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: design-rationale.md  dev-guide.md  spec.md  user-guide.md
src/breathing_memory/: __init__.py  agents_template.py  ann.py  cli.py  compression.py  config.py  embeddings.py  engine.py  factory.py  maintenance.py  mcp_server.py  models.py  runtime.py  store.py
src/breathing_memory/adapters/: serializers.py
src/breathing_memory/adapters/mcp/: __init__.py  server.py
src/breathing_memory/core/: __init__.py  factory.py  ports.py  service.py  types.py
tests/: test_ann.py  test_cli.py  test_cli_integration.py  test_compression.py  test_embeddings.py  test_engine.py  test_live_maintenance.py  test_mcp.py  test_runtime.py
tests/support/: fake_codex.py
