[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "breathing-memory"
version = "0.3.0"
description = "Local Codex memory manager with an official Python SDK-based MCP server."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "OpenAI Codex" }]
license = "MIT"
license-files = ["LICENSE"]
dependencies = ["mcp>=1.26,<2", "platformdirs>=4,<5"]
keywords = ["codex", "mcp", "memory", "sqlite", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]

[project.optional-dependencies]
semantic = ["sentence-transformers>=3,<4"]

[project.urls]
Homepage = "https://github.com/KazinaG/breathing_memory"
Repository = "https://github.com/KazinaG/breathing_memory"

[project.scripts]
breathing-memory = "breathing_memory.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
